<resources>
    <string name="app_name">CryptoSMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_conversations_container">ConversationsContainer</string>
    <string name="title_activity_fragment_container">FragmentContainer</string>

    <!--Welcome strings-->
    <string name="welcome_title">Welcome To CryptoSMS!</string>
    <string name="welcome_message">Before you get started, we need to take care of a few things on
    our end. Don\'t worry, the process is totally automated. Just press the get started button, and
    we\'ll have you up and running in no time. If you\'d like to know the details, check our website!
    </string>
    <string name="get_started_button">Get Started!</string>

    <!--Used by the main conversations view and the individual conversation view.-->
    <string name="title_activity_thread_container">ThreadContainer</string>
    <string name="send">Send</string>
    <string name="action_new_message">New Message</string>
    <string name="destination_hint">To</string>
    <string name="new_message_hint">New Message</string>
    <string name="new_message_title">New Message</string>
    <string name="empty_message">Unable to send a message with no content</string>
    <string name="empty_recipient">Unable to send a message with no recipient</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_number">Contact number</string>
    <string name="contact_type">Contact type</string>

    <!--Used in the settings-->
    <string name="settings_notification_title">Notification Settings</string>
    <string name="notifications_on_title">Enable notifications</string>
    <string name="notifications_vibration_on_title">Enable vibration</string>
    <string name="notifications_vibration_on_summary">If enabled, will vibrate your device when a new message is received.</string>
    <string name="notifications_sound_on_title">Enable sound</string>
    <string name="notifications_sound_on_summary">If enabled, your device will make a noise when a new message is received.</string>
    <string name="title_activity_new_message">NewMessageActivity</string>

</resources>
