<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contact_name"
        android:id="@+id/adapter_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contact_number"
        android:id="@+id/adapter_number"
        android:layout_below="@+id/adapter_name"
        android:layout_alignLeft="@+id/adapter_name"
        android:layout_alignStart="@+id/adapter_name"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_type"
        android:id="@+id/adapter_type"
        android:layout_below="@+id/adapter_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>
</RelativeLayout>